--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       
           <h1 class="goat-h1">PLAY LIKE THE</h1>
           <p class="goat-p">G.O.A.T.</p>
+          <h6>1-Click instant play</h6>
+          <h6>No Download</h6>
+          <h6>1000s of supported online games</h6>
         
     </div>
 
@@ -48,6 +51,10 @@
     </div>
 
 </main>
+ 
 
+<div>
+
+</div>
 </body>
 </html>
