--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>    
     </div>
     <div class="goat-img">
-       <img src="Group 18.png" alt="">
+       <img class="goat-img-img"src="Group 18.png" alt="">
     </div>
 </main>
 
