--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
     <p>Cookie Policy</p>
     <p>Privacy Settings</p>
 </div>
-<div class="fifth">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</div>
+<div class="fifth">Play Games &commat; Gamer &commat; 2000-2023 Gamer Bangladesh</div>
 
 </div>
+
+
 </body>
 </html>
